# tomo1firmware

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  ble_pairing.c  fall_detection.c  fall_detection.h  idf_component.yml  license  sdkconfig.defaults
.github/workflows/: esp32s3-build.yml
main/: CMakeLists.txt  app_main.c  appmain.c  ble.c  ble.h  ble_advanced.c  ble_advanced.h  ble_pairing.c  ble_pairing.h  button.c  button.h  cloud_api.c  cloud_api.h  diagnostics.c  diagnostics.h  emergency_button.c  emergency_button.h  fall_detection.c  fall_detection.h  health_sensors.c  health_sensors.h  i2c_bus.c  i2c_bus.h  max17048.c  max17048.h  mpu6050.c  mpu6050.h  ota_update.c  ota_update.h  power_mgmt.c  power_mgmt.h  security.c  security.h  voice_trigger.c  voice_trigger.h  watchdog.c  watchdog.h
workflows/: esp32s3-build.yml
