idf_component_register(
    SRCS
        app_main.c
        ble.c
        ble_pairing.c
        ble_advanced.c   # ← new advanced BLE module
        button.c
        emergency_button.c
        diagnostics.c
        health_sensors.c
        i2c_bus.c
        max17048.c
        mpu6050.c
        ota_update.c
        power_mgmt.c
        security.c
        voice_trigger.c
        cloud_api.c
    INCLUDE_DIRS
        "."
)
