idf_component_register(
    SRCS
        app_main.c
        ble.c
        ble_pairing.c
        ble_advanced.c
        button.c
        emergency_button.c
        diagnostics.c
        power_mgmt.c
        health_sensors.c
        i2c_bus.c
        max17048.c
        mpu6050.c
        ota_update.c
        cloud_api.c
        watchdog.c         # ✅ Stage 10 addition
    INCLUDE_DIRS
        .
)
